[gd_scene load_steps=2 format=3 uid="uid://cs8y67w2tt7sd"]

[ext_resource type="Script" path="res://Entities/Towers/BaseTower/TowerRange.gd" id="1_m7udi"]

[node name="TowerRange" type="Area2D"]
collision_layer = 64
collision_mask = 128
script = ExtResource("1_m7udi")

[node name="Collider" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_entered"]
[connection signal="area_exited" from="." to="." method="_on_exited"]
